--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
-    <head><meta charset="utf-8"/>
-        <link rel="icon" href="/Photo.jpeg"/>
-        <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <meta name="theme-color" content="#000000"/>
-        <meta name="description" content="Web site created using create-react-app"/>
-        <link rel="apple-touch-icon" href="/Photo.jpeg"/>
-        <link rel="manifest" href="/manifest.json"/>
-        <title>SIVAPRIYA P</title>
-        <script defer="defer" src="/static/js/main.e071d137.js"></script>
-        <link href="/static/css/main.bf538fe7.css" rel="stylesheet">
-    </head>
+    <head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/Photo.jpeg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/Photo.jpeg" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>SIVAPRIYA P</title>
+</head>
+
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div>
     </body>
