--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
     <head>
   <meta charset="utf-8" />
@@ -14,4 +14,4 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div>
     </body>
-</html>
+</html> -->
